[tool.poetry]
name = "myspace-backend"
version = "0.1.0"
description = "Main server for the app"
authors = ["Dheeraj-Nalapat <dheerajnalapat3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
